--- a/menu.html
+++ b/menu.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="-restaurant-menu_89837.png" type="image/x-icon">
 </head>
 
-<body style="background-color: antiquewhite;">
+<body>
 
-    <h1 style="text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(96, 24, 24);">Tasty Table Menu</h1>
+    <h1>Tasty Table Menu</h1>
     
     <!-- Appetizers Section -->
-    <h2 style="margin-left: 5px;">Appetizers</h2> 
+    <h2>Appetizers</h2> 
     <ul>
         <li>
             <strong><i>Caprese Salad</i></strong>
@@ -32,7 +32,7 @@
     </ul>
 
     <!-- Main Courses Section -->
-    <h2 style="margin-left: 5px;">Main Courses</h2> 
+    <h2>Main Courses</h2> 
     <ul>
         <li>
             <strong><i>Grilled Salmon</i></strong>     
@@ -52,7 +52,7 @@
     </ul>
 
     <!-- Desserts Section -->
-    <h2 style="margin-left: 5px;">Desserts</h2> 
+    <h2>Desserts</h2> 
     <ul>
         <li>
             <strong><i>Chocolate Fondue</i></strong>     
@@ -72,7 +72,7 @@
      </ul>
 
 
-    <p style="text-align: center; font-size: 30px;"><a href="contact.html">Reserve Now</a></p> 
+    <p><a href="contact.html">Reserve Now</a></p> 
 
 </body>
 </html>
